# MuditaOS

module-bsp/board/rt1051/bsp/rtc/: rtc.cpp
module-bsp/board/rt1051/puretx/hal/battery_charger/: BatteryCharger.cpp
module-db/Database/: Database.cpp
module-os/: CMakeLists.txt  LockGuard.cpp
module-os/board/rt1051/include/: FreeRTOSConfig.h
module-services/service-db/: ServiceDBCommon.cpp
module-services/service-desktop/: ServiceDesktop.cpp
module-services/service-desktop/include/service-desktop/: Outbox.hpp  ServiceDesktop.hpp
products/BellHybrid/: BellHybridMain.cpp  CMakeLists.txt
products/BellHybrid/apps/application-bell-main/include/application-bell-main/: ApplicationBellMain.hpp
products/BellHybrid/apps/application-bell-meditation-timer/data/: Contract.hpp  MeditationCommon.hpp
products/BellHybrid/apps/application-bell-meditation-timer/models/: ChimeVolume.cpp
products/BellHybrid/apps/common/src/: AudioModel.cpp
products/PurePhone/: CMakeLists.txt  PurePhoneMain.cpp
products/PurePhone/services/desktop/endpoints/outbox/: OutboxHelper.cpp
